--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
       # Output to build folder
       - uses: actions/upload-artifact@v4
         with:
-          name: Build
+          name: crabity-${{ matrix.targetPlatform }}
           path: build
 
   buildMacOS:
@@ -121,5 +121,5 @@ jobs:
       # Output to build folder
       - uses: actions/upload-artifact@v4
         with:
-          name: Build
+          name: crabity-StandaloneOSX
           path: build
