Add code to activate license

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
+      - name: Unity - Activate
+        uses: game-ci/unity-activate@v2.0.0
+
       # Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
