--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -7,12 +7,5 @@ jobs:
     name: Request manual activation file 🔑
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: game-ci/unity-request-activation-file@v2
-        id: getManualLicenseFile
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: Manual Activation File
-          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
+        - name: Unity - Activate
+          uses: game-ci/unity-activate@v2.0.0
