Adding Level 5 (in progress) and modified Level 4

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.high-definition": "14.0.9",
     "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.services.analytics": "5.1.1",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
