Removing test runner from CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,37 +6,36 @@ on:
       - main
 
 jobs:
-  testRunner:
-    name: Test my project
-    runs-on: ubuntu-latest
-    permissions: write-all
-    steps:
-      # Checkout
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          lfs: true
+  # testRunner:
+  #   name: Test my project
+  #   runs-on: ubuntu-latest
+  #   permissions: write-all
+  #   steps:
+  #     # Checkout
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #       with:
+  #         lfs: true
 
-      # Cache
-      - uses: actions/cache@v4
-        with:
-          path: Library
-          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: |
-            Library-
+  #     # Cache
+  #     - uses: actions/cache@v4
+  #       with:
+  #         path: Library
+  #         key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+  #         restore-keys: |
+  #           Library-
 
-      # Test
-      - name: Run tests
-        uses: game-ci/unity-test-runner@v4
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
+  #     # Test
+  #     - name: Run tests
+  #       uses: game-ci/unity-test-runner@v4
+  #       env:
+  #         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+  #         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+  #         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+  #       with:
+  #         githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   buildWindows:
-    needs: testRunner
     name: Build for Windows 🖥️
     runs-on: ubuntu-latest
     strategy:
@@ -75,7 +74,6 @@ jobs:
           path: build/Crabity
 
   buildMacOS:
-    needs: testRunner
     name: Build for MacOS 🍎
     runs-on: ubuntu-latest
     strategy:
